fix landing on mobile

--- a/assets/css/landing.styl
+++ b/assets/css/landing.styl
@@ -158,7 +158,8 @@
 
     &-actions
       flex-direction column
-      position absolute
+      position relative
+      top -28px
       z-index 2
 
     &-action
